# cloud-agent

./: .gitignore  ARCHITECTURE.md  CONNECTIVITY.md  README.md  SKILL.md  baseten-proxy.js  debug-env.ts  debug-loadenv.ts  docker-compose.surrealdb.yml  docs-prompts.jsonl  history.txt  import-sessions.cjs  load-sessions.sh  opencode-sessions.json  package-lock.json  package.json  repos.yaml  schema.surql  test-live.ts  test-opencode-sessions.ts  test-pr-sandbox-integration.ts  test-session-integration.ts  test-surreal-connection.ts  test-surreal-simple.ts  tsconfig.json
docs/: API.md  ARCHITECTURE.md  GUIDE.md  PR-SANDBOX.md
pybatch/: README.md  debug_git_push.py  debug_model_response.py  debug_orchestrator.py  jobs-1-formal-self-apply.json  jobs-1-test.json  jobs-10-formal-midspiral-quint.json  jobs-10-prs-dual.json  jobs-10-prs.json  jobs-2-formal-retry.json  jobs-brightforest-e2e.json  jobs-brightforest-meta.json  jobs.json  pyproject.toml  reap_daytona.py  run_formal_batch.py  run_live_test.py  run_local_batch.py  run_test_batch.py
pybatch/src/sdlc_batch/: __init__.py  driver.py  github.py  sdlc_chain.py  spawner.py  tokens.py  validation.py  verify_prs.py
pybatch/src/sdlc_batch/providers/: __init__.py  base.py  daytona.py  e2b.py  northflank.py
pybatch/tests/: test_github.py  test_sdlc_chain.py  test_spawner.py  test_tokens.py  test_validation.py
rules/: business_rules.yaml  midspiral_org_budget.yaml
schemas/: opencode-sessions.surql
scripts/: deploy-schema.ts  formal_midspiral_quint_smoke.sh  run-mastra-mcp.sh  setup-verification-tools.sh  (+3 more)
(+64 files in other folders)
